tests/experimental/success/forward_refs.lus
node one (in: two) returns (out: two) ;
(*@contract
  import two (in) returns (out) ;
*)
let
  out = two(two_const -> pre in) ;
tel

node two (in: two) returns (out: two) ;
let
  out = 0.0 -> pre in ;
tel

contract two (in: two) returns (out: real) ;
let
  import one (in) returns (out) ;
  assume in >= 0.0 ;
  guarantee out >= 0.0 ;
tel

contract one (in: two) returns (out: real) ;
let
  assume in >= 0.0 ;
  guarantee out >= 0.0 ;
tel

type one = { blah: two } ;

type two = real ;

const two_const = 0.0 ;