tests/experimental/error/test_out_param_in_contract_assume.lus
node b (x:int) returns (y:int);
let
y = x;
tel


node a (x:int) returns (y:int)
(*@contract
 assume x = b(y); -- this should fail
*)
let
 y = x;
tel